--- a/PracticoGrupo/PracticoGrupo.vbproj
+++ b/PracticoGrupo/PracticoGrupo.vbproj
@@ -137,5 +137,11 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Money_Face_Emoji.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\telefono-icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
